--- a/main.html
+++ b/main.html
@@ -8,7 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <div id="verification_heading">OTP Verification</div>
+    <div id="verification_subtext">Enter the 6-digit OTP sent to your mobile number</div>
+
+    <div class="code-container">
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(1)" onkeydown="onBackspace(1)">
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(2)" onkeydown="onBackspace(2)">
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(3)" onkeydown="onBackspace(3)">
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(4)" onkeydown="onBackspace(4)">
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(5)" onkeydown="onBackspace(5)">
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(6)" onkeydown="onBackspace(6)">
+    </div>
     <script type="text/javascript" src="./script.js">
+		  function onCodeInput(index) {
+            if (index < 6) {
+                document.querySelector(`.code:nth-child(${index + 1})`).value = event.target.value;
+                document.querySelector(`.code:nth-child(${index + 2})`).focus();
+            } else {
+                document.querySelector(`.code:nth-child(${index})`).value = event.target.value;
+            }
+        }
+
+        function onBackspace(index) {
+            if (event.key === 'Backspace' && index > 1) {
+                document.querySelector(`.code:nth-child(${index - 1})`).focus();
+            }
+        }
 </script>
 
 </body>
