--- a/main.html
+++ b/main.html
@@ -8,17 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	  <div id="verification_heading">OTP Verification</div>
-    <div id="verification_subtext">Enter the 6-digit OTP sent to your mobile number</div>
+	<div id="main_container">
+	  <h1 id="verification_heading">OTP Verification</h1>
+    <h6 id="verification_subtext">We emailed you the six digit code to acciojob@email.com Enter the code below to confirm your email address</h6>
 
     <div class="code-container">
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(1)" onkeydown="onBackspace(1)">
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(2)" onkeydown="onBackspace(2)">
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(3)" onkeydown="onBackspace(3)">
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(4)" onkeydown="onBackspace(4)">
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(5)" onkeydown="onBackspace(5)">
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(6)" onkeydown="onBackspace(6)">
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(1)" onkeydown="onBackspace(1)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(2)" onkeydown="onBackspace(2)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(3)" onkeydown="onBackspace(3)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(4)" onkeydown="onBackspace(4)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(5)" onkeydown="onBackspace(5)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(6)" onkeydown="onBackspace(6)" placeholder='0'>
     </div>
+		</div>
     <script type="text/javascript" src="./script.js">
 		 
 </script>
