--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
     <h6 id="verification_subtext">We emailed you the six digit code to acciojob@email.com Enter the code below to confirm your email address</h6>
 
     <div class="code-container">
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(0)" onkeydown="onBackspace(0)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(1)" onkeydown="onBackspace(1)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(2)" onkeydown="onBackspace(2)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(3)" onkeydown="onBackspace(3)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(4)" onkeydown="onBackspace(4)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(5)" onkeydown="onBackspace(5)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(0)" onkeydown="onBackspace(0,event)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(1)" onkeydown="onBackspace(1,event)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(2)" onkeydown="onBackspace(2,event)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(3)" onkeydown="onBackspace(3,event)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(4)" onkeydown="onBackspace(4,event)" placeholder='0'>
+        <input class="code" type="text" maxlength="1" oninput="onCodeInput(5)" onkeydown="onBackspace(5,event)" placeholder='0'>
     </div>
 		</div>
     <script type="text/javascript" src="./script.js">
