--- a/main.html
+++ b/main.html
@@ -10,15 +10,15 @@
 	<!-- the entire body must be written by student -->
 	<div id="main_container">
 	  <h1 id="verification_heading">OTP Verification</h1>
-    <h6 id="verification_subtext">We emailed you the six digit code to acciojob@email.com Enter the code below to confirm your email address</h6>
+    <h6 id="verification_subtext">Verify Your Account</h6>
 
     <div class="code-container">
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(0)" onkeydown="onBackspace(0,event)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(1)" onkeydown="onBackspace(1,event)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(2)" onkeydown="onBackspace(2,event)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(3)" onkeydown="onBackspace(3,event)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(4)" onkeydown="onBackspace(4,event)" placeholder='0'>
-        <input class="code" type="text" maxlength="1" oninput="onCodeInput(5)" onkeydown="onBackspace(5,event)" placeholder='0'>
+        <input id="code-1" class="code" type="text" maxlength="1" oninput="onCodeInput(0)" onkeydown="onBackspace(0,event)" placeholder='0'>
+        <input id="code-2" class="code" type="text" maxlength="1" oninput="onCodeInput(1)" onkeydown="onBackspace(1,event)" placeholder='0'>
+        <input id="code-3" class="code" type="text" maxlength="1" oninput="onCodeInput(2)" onkeydown="onBackspace(2,event)" placeholder='0'>
+        <input id="code-4" class="code" type="text" maxlength="1" oninput="onCodeInput(3)" onkeydown="onBackspace(3,event)" placeholder='0'>
+        <input id="code-5" class="code" type="text" maxlength="1" oninput="onCodeInput(4)" onkeydown="onBackspace(4,event)" placeholder='0'>
+        <input id="code-6" class="code" type="text" maxlength="1" oninput="onCodeInput(5)" onkeydown="onBackspace(5,event)" placeholder='0'>
     </div>
 		</div>
     <script type="text/javascript" src="./script.js">
