--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="main_container">
-	  <h1 id="verification_heading">OTP Verification</h1>
-    <h6 id="verification_subtext">Verify Your Account</h6>
+	  <h1 id="verification_heading">Verify Your Account</h1>
+    <h6 id="verification_subtext">we emailed you the six digit code to acciojob@email.com Enter the code below to confirm your email address</h6>
 
     <div class="code-container">
         <input id="code-1" class="code" type="text" maxlength="1" oninput="onCodeInput(0)" onkeydown="onBackspace(0,event)" placeholder='0'>
